--- a/style.css
+++ b/style.css
@@ -3,13 +3,28 @@ body{
     color: white;
     margin: 0;
     padding: 0;
+    font-size: 20px;
+}
+h1{
+    font-size: 40px;
+}
+h2{
+    font-size: 35px;
+}
+h3{
+    font-size: 30px;
 }
 header img{
     width: 100%;
+    margin: auto;
+}
+.header-img{
+    width: 40%;
+    margin: auto;
 }
 nav a{
     color: white;
-    font-size: 20px;
+    font-size: 25px;
     margin: 10px;
     text-decoration: none;
 }
@@ -17,9 +32,14 @@ nav a{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-auto-rows: minmax(100px, auto);
+    
+}
+.crew{
+    background: white;
+    color: navy;
+    padding: 0 10px;
 }
 .container div{
-    
     text-align: center;
 }
 .container div ul{
@@ -27,15 +47,12 @@ nav a{
     list-style: none;
 }
 .director{
-    background: white;
-    color: navy;
     grid-column: 1/3;
 }
 .producer{
     grid-column: 3/5;
 }
 .story{
-    background: orange;
     grid-column: 4/5;
     
 }
@@ -44,6 +61,55 @@ nav a{
 }
 .voices{
     grid-column: 2/4;
-    grid-row: 2
+    grid-row: 2;
 
+}
+.tune-squad img{
+    height: 100%;
+    width: 100%;
+
+}
+.bugs{
+    grid-column: 1;
+    grid-row: 1;
+    background: skyblue;
+}
+.daffy{
+    grid-column: 3;
+    grid-row: 1;
+    background: yellow;
+}
+.tweety{
+    grid-column: 2;
+    grid-row: 1;
+    background: red;
+    vertical-align: bottom;
+}
+.tweety img{
+    height:70%;
+}
+.porky{
+    grid-column: 2;
+    grid-row: 2;
+    background: orange;
+}
+.roadrunner{
+    grid-column: 3;
+    grid-row: 2;
+    background: darkblue;
+}
+.wile{
+    grid-column: 4;
+    grid-row: 1;
+    background: green;
+}
+.sylvester{
+    grid-column: 4;
+    grid-row: 2;
+    background: purple;
+}
+.foghorn{
+    grid-column: 1;
+    grid-row: 2;
+    background:white;
 }
