--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ body{
     font-size: 20px;
 }
 h1{
-    font-size: 40px;
+    font-size: 60px;
+    text-align: center;
 }
 h2{
     font-size: 35px;
@@ -32,7 +33,7 @@ nav a{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-auto-rows: minmax(100px, auto);
-    
+  
 }
 .crew{
     background: white;
