--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 body{
-    background: navy;
     color: white;
     margin: 0;
     padding: 0;
@@ -15,6 +14,18 @@ h2{
 h3{
     font-size: 30px;
 }
+footer{
+    color: white;
+    background: navy;
+    height: 80px;
+}
+
+footer p{
+    text-align: center;
+    margin: 20px;
+    padding: 20px;
+    
+}
 header img{
     width: 100%;
     margin: auto;
@@ -23,11 +34,31 @@ header img{
     width: 40%;
     margin: auto;
 }
+nav{
+    margin-left: 20%;
+}
 nav a{
     color: white;
     font-size: 25px;
-    margin: 10px;
+    margin: 5px;
     text-decoration: none;
+    text-align: center;
+    border: 3px solid navy;
+    border-radius: 10px;
+    background: grey;
+    padding: 15px;
+}
+a:hover{
+    background: navy;
+    font-size: 30px;
+}
+header{
+    background: navy;
+
+}
+.about{
+    padding: 10px 60px;
+    background: grey;
 }
 .container{
     display: grid;
@@ -38,7 +69,7 @@ nav a{
 .crew{
     background: white;
     color: navy;
-    padding: 0 10px;
+    padding: 0 60px;
 }
 .container div{
     text-align: center;
@@ -48,22 +79,17 @@ nav a{
     list-style: none;
 }
 .director{
-    grid-column: 1/3;
+    grid-column: 2;
 }
 .producer{
-    grid-column: 3/5;
-}
-.story{
-    grid-column: 4/5;
-    
+    grid-column: 3;
 }
 .music{
-
+    grid-column: 2;
 }
 .voices{
-    grid-column: 2/4;
+    grid-column: 3;
     grid-row: 2;
-
 }
 .tune-squad img{
     height: 100%;
