--- a/tweety.css
+++ b/tweety.css
@@ -6,7 +6,7 @@ header{
     background: blue;
 }
 h3{
-    color: green;
+    color: orangered;
 }
 p{
     padding: 0 20px;
@@ -26,16 +26,13 @@ li{
     grid-row: 1;
    
 }
-.img-sylvester-1 img{
-    
-}
+
 .img-sylvester-1{
     grid-column: 3;
     grid-row: 1;
 }
 img{
     width: 100%;
-    
 }
 .img-tweety-3 img{
     width: 100%;
@@ -57,12 +54,4 @@ img{
 }
 .img-tweety-2 img{
     height: 500px;
-}
-.img-tweety-3{
-    grid-column: 1/4;
-    grid-row: 3;
-}
-.img-tweety-3 img{
-    width: 100%;
-    height: 400px;
 }
