--- a/style.css
+++ b/style.css
@@ -35,9 +35,10 @@ header img{
     margin: auto;
 }
 nav{
-    margin-left: 20%;
+    margin: 5px 10%;
 }
 nav a{
+    display: inline-block;
     color: white;
     font-size: 25px;
     margin: 5px;
